--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,9 @@
+// .container{
+//     width:100%;
+//     height:100%;
+//     background-color: antiquewhite;
+
+// }
 .main {
     position:relative;
     border: 1px solid black;
@@ -7,6 +13,7 @@
     margin: auto;
     text-align: center;
     top:50px;
+    background-color: rgba(0,0,0,0.2);
    //justify-content: center;
    //align-items: center;
     h3 {
@@ -14,20 +21,26 @@
         font-weight: bolder;
         padding: 10px
     }
-    form{
-        button{
-            width:100px
+    .user{
+        position: relative;
+        .accountIcon{
+            position: absolute;
+            left:75px
         }
     }
+   }
 
-}
+
 
 input {
     border: none;
     outline: none;
-    border-bottom: 2px solid gray;
+   border-bottom: 2px solid gray;
     width: 200px;
     
+}
+input:hover{
+    border-bottom: 2px solid black;
 }
 select{
     width:150px;
@@ -37,4 +50,21 @@ select{
     display: flex;
     justify-content: space-around;
 
+}
+.checkbox{
+    position:relative;
+    label{
+        position: absolute;
+        left:100px
+    }
+}
+.select{
+    position: relative;
+    select{
+        position: absolute;
+        left:100px
+    }
+}
+button{
+    width:200px
 }
