--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,5 +1,5 @@
 <div class="p1">
-    <form [formGroup]="RegForm">
+    <form [formGroup]="RegForm" (ngSubmit)="save()">
         <div class="p2">
             <h1>Registaration Form</h1>
         </div>
@@ -42,6 +42,6 @@
             <label for="address" class="col-sm-2 col-form-label">Address:</label>
             <input type="text" class="form-control w-30" id="address" placeholder="Enter Address">
         </div><br>
-        <button (click)="save()" type="button">Save</button>
+        <button type="submit">Save</button>
     </form>
 </div>
