--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,8 +27,8 @@
         <!-- </form> -->
         <br><br>
         <div class="routers">
-            <a [routerLink]="[]">Register</a>
-            <a [routerLink]="[]">Forgot Password</a>
+            <a [routerLink]="['/registration']">Register</a>
+            <a [routerLink]="['/forgetpassword']">Forgot Password</a>
         </div><br><br>
     </div>
 </div>
