--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,9 +1,8 @@
-// .container{
-//     width:100%;
-//     height:100%;
-//     background-color: antiquewhite;
-
-// }
+.main-container{
+    width:100%;
+    height:600px;
+   background-image:url(../../assets/images.jpg);
+}
 .main {
     position:relative;
     border: 1px solid black;
@@ -49,6 +48,9 @@ select{
 .routers{
     display: flex;
     justify-content: space-around;
+    a{
+        color: palevioletred;
+    }
 
 }
 .checkbox{
