change header and footer

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
+<app-header></app-header>
 <div class="main-container" >
     <div class="sub-container" *ngFor="let item of dashBoardMenu">
        <div>{{item.name}}</div>
     </div>
 </div>
+<app-footeer></app-footeer>
