--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     background-color: green;
-    div{
+   .sub-container{
        color: red; 
        line-height:80px;
        font-size: large;
@@ -12,4 +12,7 @@
         color: white;
        }
     }
+}
+.second-container{
+    min-height:400px;
 }
