--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,47 +1,52 @@
-<div class="p1">
+<div class="p1" *ngIf="naga">
     <form [formGroup]="RegForm" (ngSubmit)="save()">
-        <div class="p2">
             <h1>Registaration Form</h1>
-        </div>
         <div class="form-group row">
             <label for="fName" class="col-sm-2 col-form-label">FirstName:</label>
-            <input type="text" class="form-control" id="fName" placeholder="Enter FirstName">
+            <input type="text" formControlName="fname" class="form-control" id="fName" placeholder="Enter FirstName">
         </div>
         <div class="form-group row">
             <label for="lName" class="col-sm-2 col-form-label">LastName:</label>
-            <input type="text" class="form-control" id="lName" placeholder="Enter LastName">
+            <input type="text"formControlName="lname" class="form-control" id="lName" placeholder="Enter LastName">
         </div>
         <div class="form-group row">
             <label for="Email" class="col-sm-2 col-form-label">Email:</label>
-            <input type="text" class="form-control" id="Email" placeholder="Enter Email">
+            <input type="text" formControlName="email" class="form-control" id="Email" placeholder="Enter Email">
         </div>
         <div class="form-group row">
             <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
             <input type="password" formControlName="Pswd" class="form-control" id="inputPassword"
                 placeholder="Enter Password">
-            <div class="error" *ngIf="getRegFormControl('Pswd').invalid.getRegFormControl('Pswd')?.errors['required']">
+            <!-- <div class="error" *ngIf="getRegFormControl('Pswd').invalid.getRegFormControl('Pswd')?.errors['required']">
                 Pswd is required</div>
             <div class="error" *ngIf="getRegFormControl('Pswd').invalid.getRegFormControl('Pswd')?.errors['minlength']">
-                min.8 letters has required</div>
+                min.8 letters has required</div> -->
         </div>
         <div class="form-group row">
             <label for="inputPassword" class="col-sm-2 col-form-label">ConformPassword:</label>
-            <input type="password" class="form-control" id="inputPassword" placeholder="Enter Conform Password">
-            <div class="error"
+            <input type="password" formControlName="CPswd" class="form-control" id="inputPassword" placeholder="Enter Conform Password">
+            <!-- <div class="error"
                 *ngIf="getRegFormControl('CPswd').invalid.getRegFormControl('CPswd')?.errors['required']">CPswd is
                 required</div>
             <div class="error"
                 *ngIf="getRegFormControl('CPswd').invalid.getRegFormControl('CPswd')?.errors['minlength']">min.8 letters
-                has required</div>
+                has required</div> -->
         </div>
         <div class="form-group row">
             <label for="Ph.no" class="col-sm-2 col-form-label">Ph.No:</label>
-            <input type="number" class="form-control" id="Ph.no" placeholder="Enter Ph.No">
+            <input type="number" formControlName="phno" class="form-control" id="Ph.no" placeholder="Enter Ph.No">
         </div>
         <div class="form-group row">
             <label for="address" class="col-sm-2 col-form-label">Address:</label>
-            <input type="text" class="form-control w-30" id="address" placeholder="Enter Address">
+            <input type="text" formControlName="address" class="form-control w-30" id="address" placeholder="Enter Address">
         </div><br>
-        <button type="submit">Save</button>
+        <button type="submit" class="btn btn-primary">Save</button>
     </form>
+</div>
+<div *ngIf="!naga">
+    <h1 style="color: rgb(9, 245, 68);">Registaration is succesfully </h1>
+    <div>
+         <span>please go to login</span>
+        <a routerLink="['/login']">login</a>
+    </div>
 </div>
