--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="main-container" >
     <div class="sub-container" *ngFor="let item of dashBoardMenu">
-       <div>{{item.name}}</div>
+       <div [routerLink]="item.route" routerLinkActive="active">{{item.name}}</div>
     </div>
 </div>
