lazy module adding

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,11 @@
 <app-header></app-header>
 <div class="main-container" >
-    <div class="sub-container" *ngFor="let item of dashBoardMenu">
-       <div>{{item.name}}</div>
+    <div class="sub-container" *ngFor="let item of dashBoardMenu"
+       [routerLink]="item.route" routerLinkActive='active'>{{item.name}}
     </div>
 </div>
-<div class="second-container">
-
+<div class="outerOutlet">
+    <router-outlet></router-outlet> 
 </div>
 <app-footeer></app-footeer>
+
