--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,18 +1,26 @@
 .main-container{
     display: flex;
-    justify-content: space-around;
-    background-color: green;
+    justify-content:flex-start;
+    background-color:#333;
+    
    .sub-container{
-       color: red; 
+       color:white; 
        line-height:80px;
        font-size: large;
-       font-weight: bold;
+       font-weight: 300px;
+       padding:0px 30px;
        &:hover{
         cursor: pointer;
         color: white;
+        background-color: rgb(72, 82, 82);
+       }
+       &.active{
+        background-color: green;
        }
     }
 }
-.second-container{
-    min-height:400px;
+.outerOutlet{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
