--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -19,8 +19,8 @@
        }
     }
 }
-.outerOutlet{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+// .outerOutlet{
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
