--- a/src/app/userlist/userlist.component.html
+++ b/src/app/userlist/userlist.component.html
@@ -10,7 +10,7 @@
         <tbody>
             <tr *ngFor="let x of  users">
                 <td>{{x.name}}</td>
-                <td><button [routerLink]="['userDetails',x.id]" (click)="details()">details>></button></td>
+                <td><button class="btn btn-danger" [routerLink]="['userDetails',x.id]" (click)="details()">details>></button></td>
             </tr>
         </tbody>
      </table>
