--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -1,5 +1,5 @@
 <div>
-    <mat-form-field appearance="standard">
+    <mat-form-field appearance="standard"  class=" mat-focused">
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
     </mat-form-field>
