--- a/src/app/invoices/invoices.component.scss
+++ b/src/app/invoices/invoices.component.scss
@@ -13,7 +13,7 @@ table {
   td {
     color: black;
     border-bottom: 1px solid rgb(128, 126, 126);
-    text-align: center;
+   // text-align: center;
 
   }
 
