--- a/src/app/userlist/user-details/user-details.component.html
+++ b/src/app/userlist/user-details/user-details.component.html
@@ -1,7 +1,7 @@
 <div class="sss">
     <div class="ddd">
         <div>
-            <h1>this userdetails</h1>
+            <h1>UserDetails</h1>
             <h1 style="color:yellow"> userid: {{user.id}}</h1>
             <span style="color: red;">profile photo:</span><br><img style="height:100px;width:100px;"
                 src="{{user.photo}}" alt="{{user.name}}">
