--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,3 +1,9 @@
+.header{
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0px;
+        z-index:1;
+   }
 .main-container{
     display: flex;
     justify-content:flex-start;
@@ -19,8 +25,3 @@
        }
     }
 }
-// .outerOutlet{
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-// }
