--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
         <br><br>
         <div class="routers">
             <a [routerLink]="['/registration']">Register</a>
-            <a [routerLink]="['/forgetpassword']">Forgot Password</a>
+            <a [routerLink]="['/forgetpasswordemailLink']">Forgot Password</a>
         </div><br><br>
     </div>
 </div>
