--- a/src/app/components/forget-password/forget-password.component.html
+++ b/src/app/components/forget-password/forget-password.component.html
@@ -28,6 +28,6 @@
       />
     </div>
     <br />
-    <button type="Enter">Reset password</button><br />
+    <button (click)="resetPassword()" class="btn btn-danger">Reset password</button><br />
   </div>
 </div>
