--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,6 +1,6 @@
 .main-container{
     width:100%;
-    height:600px;
+    height:100vh;
    background-image:url(../../assets/images.jpg);
 }
 .main {
