--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <app-header class="header"></app-header>
-<div style="min-height:450px;">
+<div >
     <div class="main-container" >
         <div class="sub-container" *ngFor="let item of dashBoardMenu"
         [routerLink]="item.route" routerLinkActive='active'>{{item.name}}
