--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -36,16 +36,22 @@
         <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
       </ng-container>
       <!-- //mat icons -->
-      <ng-container matColumnDef="view">
-        <th mat-header-cell *matHeaderCellDef style="color:white">View </th>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef style="color:white">Actions </th>
         <td mat-cell *matCellDef="let element">
           <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
             <mat-icon style="color:rgb(77, 137, 220)">menu</mat-icon>
           </button>
+          <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" aria-label="Example icon button with a menu icon">
+            <mat-icon>delete</mat-icon>
+          </button>
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="update">
+      <!-- <ng-container matColumnDef="update">
         <th mat-header-cell *matHeaderCellDef style="color:white">Update </th>
         <td mat-cell *matCellDef="let element">
           <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
@@ -61,7 +67,7 @@
             <mat-icon>delete</mat-icon>
           </button>
         </td>
-      </ng-container>
+      </ng-container> -->
 
       <tr class="head" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns:displayedColumns"></tr>
@@ -74,3 +80,7 @@
     </mat-paginator>
    <br><br><br>
   </div>
+  
+    <!-- spinner -->
+    <mat-spinner strokeWidth="8" color="warn" diameter="100"   *ngIf="spinner"></mat-spinner>
+
