--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,5 +2,5 @@
     <div><img src="../../../assets/apple.jpg"/></div>
     <h1 class="demo" class="border border-primary position-static  p-3 " class="text-danger p-2"
         style="--bs-bg-opacity: .5;">
-        THIS IS HEADER</h1>
+        VSS Project-1</h1>
 </div>
