--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -37,7 +37,7 @@
       </ng-container>
       <!-- //mat icons -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef style="color:white">Actions </th>
+        <th class="actions" mat-header-cell *matHeaderCellDef style="color:white">Actions </th>
         <td mat-cell *matCellDef="let element">
           <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
             <mat-icon style="color:rgb(77, 137, 220)">menu</mat-icon>
