--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -1,10 +1,7 @@
-div{
-    margin-top: 20px;
-}
 .p1 {
     display: flex;
     justify-content: center;
-    //border: 2px solid black;
+    border: 2px solid black;
     width: 500px;
     margin: auto;
     background: aquamarine;
@@ -15,7 +12,7 @@ h1 {
     color:orchid;
 }
 button{
-    background: rgb(221, 24, 139);
+    background: steelblue;
     font-size: 20px;
 }
 
@@ -23,7 +20,7 @@ button{
     color: red;
 }
 
-.fName,.lName,.email,.pswd,.cpswd,.phno,.addrs{
+.form-group{
     position: relative;
     span{
         position:absolute;
@@ -31,4 +28,37 @@ button{
         left: 310px;
     }
 }
+.s2{
+    width:600px;
+    background:#fff;
+    border-radius: 10px;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    text-align:center;
+    margin: auto;
+    color:#333;
+    padding:30px;
+    border: 1px solid black;
+}
+.s2 img{
+    width:100px;
+    border-radius: 50%;
+    margin-top: -80px;
+    box-shadow: 0px 2px 2px #fff;
+}
+.s2 button{
+    width:100%;
+    padding:10px;
+    color: #fff;
+    background: #6fd649;
+    border: 0;
+    font-size: 25px;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 2px 2px #fff;
+}
+
+
 
