--- a/src/app/components/forget-password/forget-password.component.html
+++ b/src/app/components/forget-password/forget-password.component.html
@@ -1,33 +1,37 @@
 <div class="reset">
   <div>
     <br />
-    <h1>Reset Your Password</h1>
+    <h1>Forget Password</h1>
     <br />
     <p>we have sent a four digit code your phone/email</p>
     <div>
       <label for="input password">Please Enter OTP</label><br />
-      <input type="password" name="" id="Enter" placeholder="Enter OTP" />
+      <input type="text" formControlName="OTP" class="form-control"  maxlength="20"id="OTP" placeholder="OTP">
     </div>
     <div>
       <label for="input password">New password</label><br />
       <input
         type="password"
         name=""
+        formControlName="Enter password"
+        class="form-control"
         id="Enter password"
         placeholder="Enter password"
       />
     </div>
 
     <div>
-      <label for="input password">Enter email</label><br />
+      <label for="input password">Confirm password</label><br />
       <input
         type="password"
         name=""
+        formControlName="Enter password"
+        class="form-control"
         id="Enter password"
         placeholder="Enter password"
       />
     </div>
     <br />
-    <button (click)="resetPassword()" class="btn btn-danger">Reset password</button><br />
+    <button (click)="resetPassword()"   class="btn btn-danger">Reset password</button><br />
   </div>
 </div>
