--- a/src/app/components/forget-password/forget-password.component.scss
+++ b/src/app/components/forget-password/forget-password.component.scss
@@ -5,6 +5,10 @@
     display:flex;
     margin: auto;
     justify-content: center;
+    text-align: center;
+    display: flex;
+    margin-top: 150px;
+
     
 }
 
@@ -12,8 +16,13 @@ div{
     text-align: center;
     color: green;
     line-height: 30px;
+    background-color: rgba(255, 192, 203, 0.909);
+   
+    box-shadow: 5px 10px 20px red inset;
+   
+     
+   
+}
     
-    background-color: pink;
     
     
-    }
