--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -1,57 +1,62 @@
-<div>
-    <mat-form-field appearance="standard"  class=" mat-focused">
+<div class="topRow">
+  <div>
+    <mat-form-field appearance="standard" class=" mat-focused">
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
     </mat-form-field>
   </div>
+  <div>
+    <button class="addInvoice" (click)="addNewInvo()">Add invoice</button>
+  </div>
+</div>
 
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="datasource" matSort (matSortChange)="announceSortChange($event)">
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="datasource" matSort (matSortChange)="announceSortChange($event)">
 
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number"
-          style="color:white">
-          ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-      </ng-container>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number" style="color:white">
+        ID </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name" style="color:white">
-          Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name" style="color:white">
+        Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
 
-      <!-- Weight Column -->
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by email" style="color:white">
-          Email </th>
-        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-      </ng-container>
+    <!-- Weight Column -->
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by email" style="color:white">
+        Email </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
 
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="phone">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by phone" style="color:white">
-          Phno </th>
-        <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
-      </ng-container>
-      <!-- //mat icons -->
-      <ng-container matColumnDef="actions">
-        <th class="actions" mat-header-cell *matHeaderCellDef style="color:white">Actions </th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
-            <mat-icon style="color:rgb(77, 137, 220)">menu</mat-icon>
-          </button>
-          <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button color="warn" aria-label="Example icon button with a menu icon">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="phone">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by phone" style="color:white">
+        Phno </th>
+      <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+    </ng-container>
+    <!-- //mat icons -->
+    <ng-container matColumnDef="actions">
+      <th class="actions" mat-header-cell *matHeaderCellDef style="color:white">Actions </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
+          <mat-icon style="color:rgb(77, 137, 220)">menu</mat-icon>
+        </button>
+        <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" aria-label="Example icon button with a menu icon"
+          (click)="deleteInv(element.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
-      <!-- <ng-container matColumnDef="update">
+    <!-- <ng-container matColumnDef="update">
         <th mat-header-cell *matHeaderCellDef style="color:white">Update </th>
         <td mat-cell *matCellDef="let element">
           <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon">
@@ -69,18 +74,46 @@
         </td>
       </ng-container> -->
 
-      <tr class="head" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns:displayedColumns"></tr>
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-      </tr>
-    </table>
-    <mat-paginator color="warn" [pageSizeOptions]="[8, 16, 24]" showFirstLastButtons>
-    </mat-paginator>
-   <br><br><br>
+    <tr class="head" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns:displayedColumns"></tr>
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+  </table>
+  <!-- <mat-paginator color="warn" [pageSizeOptions]="[8, 16, 24]" showFirstLastButtons>
+  </mat-paginator> -->
+  <mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5"
+  [pageSize]="10"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  aria-label="Select page">
+</mat-paginator>
+  <br><br><br>
+</div>
+<!-- spinner -->
+<mat-spinner strokeWidth="8" color="warn" diameter="100" *ngIf="spinner"></mat-spinner>
+<!-- add new invoice -->
+<div *ngIf="showForm" class="showForm">
+  <div class="subForm">
+    <div>
+      <label for="">Id :</label>
+      <input type="text" [(ngModel)]="newInvoice.id" >
+    </div>
+    <div>
+      <label for="">Name :</label>
+      <input type="text" [(ngModel)]="newInvoice.name">
+    </div>
+    <div>
+      <label for="">Email :</label>
+      <input type="text" [(ngModel)]="newInvoice.email">
+    </div>
+    <div>
+      <label for="">Phno :</label>
+      <input type="text" [(ngModel)]="newInvoice.phone">
+    </div>
+    <div class="btns">
+      <button class="btn btn-primary" (click)="addChanges($event)">Save changes</button>
+      <button class="btn btn-danger" (click)="cancel()">Cancel</button>
+    </div>
   </div>
-  
-    <!-- spinner -->
-    <mat-spinner strokeWidth="8" color="warn" diameter="100"   *ngIf="spinner"></mat-spinner>
-
+</div>
