--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -83,7 +83,7 @@
   </table>
   <!-- <mat-paginator color="warn" [pageSizeOptions]="[8, 16, 24]" showFirstLastButtons>
   </mat-paginator> -->
-  <mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5"
+  <mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5 bg-black text-white"
   [pageSize]="10"
   [pageSizeOptions]="[5, 10, 25, 100]"
   aria-label="Select page">
