--- a/src/app/userlist/user-details/user-details.component.html
+++ b/src/app/userlist/user-details/user-details.component.html
@@ -2,11 +2,12 @@
     <div class="ddd">
         <div>
             <h1>UserDetails</h1>
-            <h1 style="color:yellow"> userid: {{user.id}}</h1>
-            <span style="color: red;">profile photo:</span><br><img style="height:100px;width:100px;"
+            <h1 class="text-success"> userid: {{user.id}}</h1>
+            <span class="text-danger">profile photo:</span><br>
+            <img style="height:100px;width:100px;"
                 src="{{user.photo}}" alt="{{user.name}}">
-            <h3 style="color: green"> full name:{{user.name}}</h3>
-            <h2 style="color: blue;">phone number:{{user.phonenumber}}</h2>
+            <h3 class="text-dark"> full name:{{user.name}}</h3>
+            <h2 class="text-warning">phone number:{{user.phonenumber}}</h2>
         </div>
     </div>
 </div>
