--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         <router-outlet></router-outlet> 
     </div>
 </div>
-<div style="width:100%;">
+<div>
    <app-footeer></app-footeer>
 </div>
 
