--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -83,12 +83,10 @@
   </table>
   <!-- <mat-paginator color="warn" [pageSizeOptions]="[8, 16, 24]" showFirstLastButtons>
   </mat-paginator> -->
-  <mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5"
-  [pageSize]="10"
-  [pageSizeOptions]="[5, 10, 25, 100]"
-  aria-label="Select page">
-</mat-paginator>
-  <br><br><br>
+  <mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5" [pageSize]="10"
+    [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
+  </mat-paginator>
+
 </div>
 <!-- spinner -->
 <mat-spinner strokeWidth="8" color="warn" diameter="100" *ngIf="spinner"></mat-spinner>
@@ -97,7 +95,7 @@
   <div class="subForm">
     <div>
       <label for="">Id :</label>
-      <input type="text" [(ngModel)]="newInvoice.id" >
+      <input type="text" [(ngModel)]="newInvoice.id">
     </div>
     <div>
       <label for="">Name :</label>
