--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,3 +1,6 @@
+*{
+    margin: 0px;
+}
 .header{
         position: -webkit-sticky;
         position: sticky;
@@ -24,4 +27,7 @@
         background-color: green;
        }
     }
+}
+.outerOutlet{
+    min-height:334px;
 }
