--- a/src/app/components/contactus/contactus.component.html
+++ b/src/app/components/contactus/contactus.component.html
@@ -1,1 +1,26 @@
-<p>contactus works!</p>
+<div class="main-cantainer d-flex justify-content-center mt-3">
+    <div class="image-container">
+        <img src="./../../../assets/contact.jpg" alt="CantactUs">
+        <div class="address">
+            <h4 class="text-success mt-5">Contact Us</h4>
+            <h3>VSS Project technologies</h3>
+            <div class="row">
+                <div class="col-6">
+                   <h5>hyderabad branch</h5>
+                   <p>11-5-398/C, <br>
+                    near Niloufer Hospital, <br>
+                    Banjara Hills, Lakdikapul,<br>
+                     Hyderabad, Telangana 500004</p>
+                </div>
+                <div class="col-6">
+                    <h5>hyderabad branch</h5>
+                    <p> 84/85,<br>
+                        Safina Plaza, <br>
+                        Infantry Rd,<br>
+                        Bengaluru, <br>
+                        Karnataka 560001</p> 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
