--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -87,16 +87,13 @@
   <!--<mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5" [pageSize]="10"
     [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
   </mat-paginator>-->
-
-
-  <mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5 bg-black text-white"
+  
+</div>
+<mat-paginator [length]="100" class="mat-paginator-outer-container mat-form-field-flex ng-tns-c76-5 bg-secondary text-white mt-3"
   [pageSize]="10"
   [pageSizeOptions]="[5, 10, 25, 100]"
   aria-label="Select page">
 </mat-paginator>
-  <br><br><br>
-
-</div>
 <!-- spinner -->
 <mat-spinner strokeWidth="8" color="warn" diameter="100" *ngIf="spinner"></mat-spinner>
 <!-- add new invoice -->
