--- a/src/app/core/footeer/footeer.component.scss
+++ b/src/app/core/footeer/footeer.component.scss
@@ -1,4 +1,5 @@
 .main-container {
+    clear: both;
     display: flex;
     justify-content: flex-start;
     background-color: rgb(190, 201, 201);
