--- a/src/app/components/contactus/contactus.component.html
+++ b/src/app/components/contactus/contactus.component.html
@@ -29,7 +29,7 @@
                         NDIA <br>
                         Call: +91 40 67605258 <br>
                         Call: +91 40 67605258 <br>
-                        E-Mail: info@vasantha.com <br>
+                        E-Mail: info@vccproject.com <br>
                     </p> 
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3804.875806118405!2d78.462843!3d17.513441!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x32e8b1d088971cd4!2sVasantha%20Tool%20Crafts%20Pvt%20Ltd!5e0!3m2!1sen!2sin!4v1622898714583!5m2!1sen!2sin" height="300px" class="w-100" frameborder="1"></iframe>
                 </div>
