--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,69 +1,92 @@
 .main-container{
-    width:100%;
-    height:100vh;
-   background-image:url(../../assets/images.jpg);
-}
-.main {
-    position:relative;
-    border: 1px solid black;
-    border-radius: 20px;
-    height: auto;
-    width: 400px;
-    margin: auto;
-    text-align: center;
-    top:50px;
-    background-color: rgba(0,0,0,0.2);
-   //justify-content: center;
-   //align-items: center;
-    h3 {
-        font-size: 18px;
-        font-weight: bolder;
-        padding: 10px
-    }
-    .user{
-        position: relative;
-        .accountIcon{
-            position: absolute;
-            left:75px
-        }
-    }
-   }
-input {
-    border: none;
-    outline: none;
-   border-bottom: 2px solid gray;
-    width: 200px;
-    
-}
-input:hover{
-    border-bottom: 2px solid black;
-}
-select{
-    width:150px;
-    left:20px
-}
-.routers{
-    display: flex;
-    justify-content: space-around;
-    a{
-        color: palevioletred;
-    }
-
-}
-.checkbox{
-    position:relative;
-    label{
-        position: absolute;
-        left:100px
-    }
-}
-.select{
+    background:url(../../assets/signin-bg.jpg) no-repeat center;
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    background-size: cover;
     position: relative;
-    select{
-        position: absolute;
-        left:100px
-    }
-}
-button{
-    width:200px
+    //z-index: -1;
+    .sub-container{
+       background: rgba(black, 0.6);
+       width: 100%;
+       height:100vh;
+       //opacity:0.6;
+      // z-index:1;
+       .bottom-container {
+            z-index:0;
+            position: absolute;
+            top: 30px;
+            right:250px;
+            img{
+                position: absolute;
+                width:50px;
+                height:50px;
+                margin:10px;
+                top:0px;
+                left:-62px;
+            }
+            span{
+                font-size:50px;
+            }
+        }
+        .login-container {
+            position: absolute;
+            z-index:2;
+            width:450px;
+            background-color:rgb(255, 255, 255);
+            top:70px;
+            left:20px;
+            border-radius:35px;
+            box-shadow: 0 16px 32px 0 rgba(145, 82, 82, 0.08);
+            .userName{
+                mat-icon{
+                position: absolute;
+                transform: scale(1);
+                top:100px;
+                left:22px;
+              }
+            }
+            .password{
+                mat-icon{
+                position: absolute;
+                transform: scale(1);
+                top:153px;
+                left:22px;
+              }
+            }
+            .text-error{
+                width:100%px;
+                height:40px;
+                p{
+                    margin:0px;
+                    padding:0px;
+                }
+            }
+            .routers{
+                  display: flex;
+                  justify-content:space-between;
+            }
+            .border{
+                border-bottom: 1px solid #f0f0f0;
+            }
+            .login-bottom{
+                display: flex;
+                justify-content: space-between;
+                img{
+                    margin-left:5px;
+                    width: 30px;
+                    height: 30px;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+            }
+        } 
+        .left-text-container {
+            position:absolute;
+            bottom:100px;
+            left:600px;
+        }
+   } 
 }
